--- a/package.json
+++ b/package.json
@@ -9,26 +9,37 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "@tailwindcss/vite": "^4.1.7",
     "@types/js-cookie": "^3.0.6",
+    "@videojs-player/vue": "^1.0.0",
     "animejs": "^4.0.2",
     "axios": "^1.9.0",
+    "cally": "^0.8.0",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "lucide-vue-next": "^0.511.0",
+    "maska": "^3.1.1",
     "notivue": "^2.4.5",
+    "pikaday": "^1.8.2",
     "pinia": "^3.0.2",
+    "swiper": "^11.2.7",
     "tailwindcss": "^4.1.7",
+    "vaul-vue": "^0.4.1",
+    "video.js": "^8.22.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@vitejs/plugin-basic-ssl": "^2.0.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "daisyui": "^5.0.37",
     "tw-animate-css": "^1.3.0",
     "typescript": "~5.8.3",
+    "vidstack": "^1.12.13",
     "vite": "^6.3.5",
+    "vite-plugin-ngrok": "^1.1.2",
     "vue-tsc": "^2.2.8"
   }
 }
