--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@tailwindcss/vite": "^4.1.7",
     "@types/js-cookie": "^3.0.6",
     "@videojs-player/vue": "^1.0.0",
+    "@vueuse/core": "^13.2.0",
     "animejs": "^4.0.2",
     "axios": "^1.9.0",
     "cally": "^0.8.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "lucide-vue-next": "^0.511.0",
@@ -23,7 +26,9 @@
     "notivue": "^2.4.5",
     "pikaday": "^1.8.2",
     "pinia": "^3.0.2",
+    "reka-ui": "^2.2.1",
     "swiper": "^11.2.7",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "vaul-vue": "^0.4.1",
     "video.js": "^8.22.0",
@@ -31,6 +36,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/node": "^22.15.21",
     "@vitejs/plugin-basic-ssl": "^2.0.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
