--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@headlessui/vue": "^1.7.23",
+		"@internationalized/date": "^3.8.1",
 		"@tailwindcss/vite": "^4.1.7",
 		"@types/js-cookie": "^3.0.6",
 		"@videojs-player/vue": "^1.0.0",
@@ -20,6 +21,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"dayjs": "^1.11.13",
+		"form-data": "^4.0.2",
 		"js-cookie": "^3.0.5",
 		"lucide-vue-next": "^0.511.0",
 		"maska": "^3.1.1",
@@ -41,6 +43,7 @@
 		"@vitejs/plugin-vue": "^5.2.3",
 		"@vue/tsconfig": "^0.7.0",
 		"daisyui": "^5.0.37",
+		"sass-embedded": "^1.89.0",
 		"tw-animate-css": "^1.3.0",
 		"typescript": "~5.8.3",
 		"vidstack": "^1.12.13",
