--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@programic/vue3-tooltip": "^1.0.0",
 		"@tailwindcss/vite": "^4.1.7",
 		"@types/js-cookie": "^3.0.6",
+		"@types/materialize-css": "^1.0.14",
 		"@videojs-player/vue": "^1.0.0",
 		"@vueuse/core": "^13.3.0",
 		"animejs": "^4.0.2",
@@ -26,10 +27,11 @@
 		"js-cookie": "^3.0.5",
 		"lucide-vue-next": "^0.511.0",
 		"maska": "^3.1.1",
+		"materialize-css": "^1.0.0-rc.2",
 		"notivue": "^2.4.5",
 		"pikaday": "^1.8.2",
 		"pinia": "^3.0.2",
-		"reka-ui": "^2.3.0",
+		"reka-ui": "^2.3.1",
 		"socket.io-client": "^4.8.1",
 		"swiper": "^11.2.7",
 		"tailwind-merge": "^3.3.0",
@@ -37,6 +39,8 @@
 		"vaul-vue": "^0.4.1",
 		"video.js": "^8.22.0",
 		"vue": "^3.5.13",
+		"vue-3-material-date-picker": "^1.2.0",
+		"vue-material-time-picker": "^1.0.0",
 		"vue-router": "^4.5.1",
 		"yup": "^1.6.1"
 	},
@@ -46,6 +50,9 @@
 		"@vitejs/plugin-vue": "^5.2.3",
 		"@vue/tsconfig": "^0.7.0",
 		"daisyui": "^5.0.37",
+		"postcss": "^8.5.5",
+		"postcss-cli": "^11.0.1",
+		"postcss-prefix-selector": "^2.1.1",
 		"sass-embedded": "^1.89.0",
 		"tw-animate-css": "^1.3.0",
 		"typescript": "~5.8.3",
